# win32-playground

./: CMakeLists.txt  build.ps1
src/: main.c  main.h
